# backup-tools

./: .gitignore  LICENSE  README.md
backup/: backup.js  package.json
backup/src/: callbackmanager.js  glacier.js  s3.js  test_callbackmanager.js
encrypt/: CMakeLists.txt  Makefile  SConstruct
encrypt/src/: arguments.cpp  arguments.hpp  encrypt.cpp  main.cpp  paddedbuffer.hpp  securestring.hpp  util.cpp  util.hpp  wuffcrypt.cpp  wuffcrypt.hpp
encrypt/tests/: CMakeLists.txt  test_paddedbuffer.cpp  test_securestring.cpp
